--- a/src/styles/ui/MainMenuItem.scss
+++ b/src/styles/ui/MainMenuItem.scss
@@ -4,7 +4,7 @@
   margin: 0;
   color: $terracotta;
   font-size: 36px;
-  font-weight: normal;
+  font-weight: 300;
   font-style: normal;
   text-align: center;
   text-transform: lowercase;
