Added various UI Elements (Button, Input, ToolWindow, etc.)

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -4,6 +4,9 @@ $blueBlack: #333840;
 $blueGray: #484D59;
 $blueLightGray: #676E80;
 
+/* Font stuff */
+$themeFont: 'Montserrat', sans-serif;
+
 /* Our standard drop-shadow */
 $dropShadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
