Added Header component and some props to Input

--- a/src/styles/ChooseUsernameWindow.scss
+++ b/src/styles/ChooseUsernameWindow.scss
@@ -4,6 +4,6 @@
   display: flex;
   justify-items: center;
   flex-direction: row-reverse;
-  align-content: end;
+  align-content: flex-end;
   margin: 30px 0 0;
 }
