Added basic transition animation to AppContainer

--- a/src/styles/ui/AppContainer.scss
+++ b/src/styles/ui/AppContainer.scss
@@ -5,6 +5,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
+}
+.app-container.animated {
+  pointer-events: none;
 }
 
 .back-button {
