--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -28,3 +28,13 @@ $dropShadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     transform: scale(0.95);
   }
 }
+
+.disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+
+  &:hover {
+    filter: none;
+    transform: none;
+  }
+}
