Added ChatItems, ChatInput and ChatWindow is now functioning.

--- a/src/styles/views/CreateLobbyView.scss
+++ b/src/styles/views/CreateLobbyView.scss
@@ -1,6 +1,7 @@
 @import 'theme';
 
 .createlobby-container {
+  max-height: 763px;
   display: flex;
   align-items: center;
   justify-content: center;
