--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -29,6 +29,19 @@ $dropShadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 }
 
+@mixin scrollbar {
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    background-color: $blueMediumGray;
+  }
+}
+
 .disabled {
   opacity: 0.6;
   cursor: not-allowed;
