--- a/src/styles/views/CreateLobbyView.scss
+++ b/src/styles/views/CreateLobbyView.scss
@@ -1,7 +1,7 @@
 @import 'theme';
 
 .createlobby-container {
-  max-height: 763px;
+  max-height: calc(min(763px, 90vh));
   display: flex;
   align-items: center;
   justify-content: center;
