Centralized font sizes

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -7,6 +7,14 @@ $blueLightGray: #676E80;
 
 /* Font stuff */
 $themeFont: 'Montserrat', sans-serif;
+$fontSizeDefault: 18px;
+$fontSizeInput: 16px;
+$fontSizeHeader: 48px;
+$fontSizeSmallHeader: 24px;
+$fontSizeCaption: 30px;
+$fontSizeChat: 14px;
+$fontSizeButton: 20px;
+
 
 /* Our standard drop-shadow */
 $dropShadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
