--- a/src/styles/ui/LobbyList.scss
+++ b/src/styles/ui/LobbyList.scss
@@ -25,7 +25,7 @@
 .lobby-list-caption {
   display: inline-block;
   font-family: $themeFont;
-  font-size: 30px;
+  font-size: $fontSizeCaption;
   font-weight: 500;
   text-transform: lowercase;
   margin: 20px 0 0;
@@ -56,7 +56,7 @@
 }
 
 .lobby-item-text {
-  font-size: 20px;
+  font-size: $fontSizeDefault;
   font-weight: 500;
   @include captionWidth;
 }
