--- a/src/styles/ui/MainMenuItem.scss
+++ b/src/styles/ui/MainMenuItem.scss
@@ -3,7 +3,7 @@
 .mainmenu-item {
   margin: 0;
   color: $terracotta;
-  font-size: 36px;
+  font-size: $fontSizeDefault * 2;
   font-weight: 300;
   font-style: normal;
   text-align: center;
