--- a/src/styles/ui/AppContainer.scss
+++ b/src/styles/ui/AppContainer.scss
@@ -14,12 +14,12 @@
 
 .back-button {
   position: absolute;
-  top: 10px;
-  left: 15px;
+  top: 0.5em;
+  left: 0.8em;
 }
 
 .help-button {
   position: absolute;
-  top: 10px;
-  right: 25px;
+  top: 0.5em;
+  right: 1em;
 }
