--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,8 @@ a {
 
 html {
   @include fullscreen;
+  font-size: $fontSizeDefault;
+  font-weight: 300;
 }
 
 body {
@@ -15,8 +17,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: $blueBlack;
-  font-size: 18px;
-  font-weight: 300;
 }
 
 #root {
