--- a/src/styles/ui/LobbyList.scss
+++ b/src/styles/ui/LobbyList.scss
@@ -2,7 +2,7 @@
 
 .lobby-list-container {
   width: 100%;
-  margin-top: 25px;
+  margin-top: 1.4em;
 }
 
 @mixin captionWidth {
@@ -19,7 +19,7 @@
 }
 
 .lobby-list-caption-container {
-  padding: 0 20px;
+  padding: 0 1.2em;
 }
 
 .lobby-list-caption {
@@ -28,7 +28,7 @@
   font-size: $fontSizeCaption;
   font-weight: 500;
   text-transform: lowercase;
-  margin: 20px 0 0;
+  margin: 0.7em 0 0;
   @include captionWidth;
 }
 
@@ -42,9 +42,9 @@
   display: flex;
   align-items: center;
   background-color: $blueMediumGray;
-  border-radius: 5px;
+  border-radius: 0.3em;
   box-shadow: $dropShadow;
-  padding: 0 20px;
+  padding: 0 1.2em;
   overflow: hidden;
   box-sizing: border-box;
 
