--- a/src/styles/ui/ToolWindow.scss
+++ b/src/styles/ui/ToolWindow.scss
@@ -3,33 +3,31 @@
 .toolwindow-container {
   color: white;
   background-color: $blueGray;
-  border-radius: 10px;
+  border-radius: 0.6em;
   overflow: hidden;
   box-shadow: $dropShadow;
   padding: 0;
 }
 
-$headerHeight: 50px;
-
 .toolwindow-header {
+  font-size: $fontSizeSmallHeader;
   background-color: $terracotta;
   color: $blueGray;
-  height: $headerHeight;
+  height: 2em;
   margin: 0;
 }
 
 .toolwindow-title {
-  margin: 0 20px;
-  font-size: $fontSizeSmallHeader;
+  margin: 0 0.8em;
   height: 100%;
   width: 100%;
-  line-height: $headerHeight;
+  line-height: 2em;
   font-weight: 600;
   text-transform: lowercase;
   text-align: left;
 }
 
 .toolwindow-content {
-  min-height: 50px;
-  margin: 20px;
+  min-height: 4em;
+  margin: 1.1em;
 }
