--- a/src/styles/ui/Window.scss
+++ b/src/styles/ui/Window.scss
@@ -30,15 +30,17 @@
 
 .window-body {
   margin: 0;
-  padding: 0;
+  padding: 2em;
+  box-sizing: border-box;
   width: 100%;
   height: calc(100% - 1.8em);
-  max-height: calc(100% - 1.8em);
   overflow-y: auto;
+  overflow-x: hidden;
   @include scrollbar;
 }
 
 .window-content {
   min-height: 5em;
-  margin: 2em;
+  margin: 0;
+  padding: 0;
 }
