Fixed chat window height in CreateLobbyView

--- a/src/styles/views/CreateLobbyView.scss
+++ b/src/styles/views/CreateLobbyView.scss
@@ -1,7 +1,7 @@
 @import 'theme';
 
 .createlobby-container {
-  max-height: 90vh;
+  max-height: 41em;
   display: flex;
   align-items: center;
   justify-content: center;
