--- a/src/styles/ui/AppContainer.scss
+++ b/src/styles/ui/AppContainer.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .app-container.animated {
   pointer-events: none;
