--- a/src/styles/ChooseUsernameWindow.scss
+++ b/src/styles/ChooseUsernameWindow.scss
@@ -5,5 +5,5 @@
   justify-items: center;
   flex-direction: row-reverse;
   align-content: flex-end;
-  margin: 1.7em 0 0;
+  margin: 1.7em 0 0 0;
 }
