Added direction to TabSwitcher transition

--- a/src/styles/ui/ToolWindow.scss
+++ b/src/styles/ui/ToolWindow.scss
@@ -33,7 +33,8 @@
   min-height: 4em;
   margin: 0;
   padding: 1.1em;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   @include scrollbar;
   box-sizing: border-box;
 }
