--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -44,6 +44,7 @@ $dropShadow: 0 0.25em 0.25em rgba(0, 0, 0, 0.25);
     width: 0.36rem;
   }
   &::-webkit-scrollbar-track {
+    border-radius: 0.18rem;
     -webkit-box-shadow: inset 0 0 0.36rem rgba(0,0,0,.3);
   }
   &::-webkit-scrollbar-thumb {
