--- a/src/styles/ui/cards/Card.scss
+++ b/src/styles/ui/cards/Card.scss
@@ -2,7 +2,7 @@
 @import 'ui/cards/colors';
 
 .card-container {
-  font-size: 2.8rem;
+  font-size: 2.8em;
   width: 3.1em;
   height: 4.4em;
   border-radius: 0.2em;
